syntax = "proto3";

package employee_service.requests.employee.update_employee;

import "employee-service/models/employee.proto";

option go_package = "github.com/nicodanke/gesty-api/shared/proto/employee-service/requests/employee";

message UpdateEmployeeRequest {
    int64 id = 1;
    optional string name = 2;
    optional string lastname = 3;
    optional string email = 4;
    optional string phone = 5;
    optional string gender = 6;
    optional string realId = 7;
    optional string fiscalId = 8;
    optional string addressCountry = 9;
    optional string addressState = 10;
    optional string addressSubState = 11;
    optional string addressStreet = 12;
    optional string addressNumber = 13;
    optional string addressZipCode = 14;
    optional string addressUnit = 15;
    optional double addressLat = 16;
    optional double addressLng = 17;
    repeated int64 facilityIds = 18;
    optional bool removeAllFacilities = 19;
}

message UpdateEmployeeResponse {
    employee_service.models.employee.Employee employee = 1;
}
